Fix spacing between toc and edits

--- a/assets/css/override.css
+++ b/assets/css/override.css
@@ -111,3 +111,8 @@ code {
   white-space: nowrap;
   vertical-align: middle;
 }
+
+.toc-bump{
+	margin-top: 20px;
+	margin-bottom: 50px;
+}
